# xiaozhi-ai-demo

./: .gitignore  .gitmodules  CMakeLists.txt  INMP441_CPP_README.md  INMP441_README.md  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  test_inmp441  test_inmp441.cpp  test_opus  test_opus.c  打开客厅灯.opus
.cursor/rules/: gen-commit.mdc  memories.mdc
.github/workflows/: build-examples.yml
components/opus/: CMakeLists.txt  opus.c
components/opus/include/: opus.h
docs/: memories.md
examples/control-led/: build_esp_idf.sh
examples/control-led/src/: CMakeLists.txt
examples/control_servo/main/: main.cc  servo_controller.h
examples/control_servo/tools/: 舵机PWM信号波形图.html
examples/speech_commands_recognition/: README.md  partitions.csv  sdkconfig.defaults.esp32s3
examples/speech_commands_recognition/main/: bsp_board.cc  main.cc
examples/speech_commands_recognition_with_llm/: BIDIRECTIONAL_AUDIO_STATUS.md  mermaid.md
examples/speech_commands_recognition_with_llm/main/: CMakeLists.txt  audio_manager.cc  audio_manager.h  bsp_board.cc  bsp_board.h  main.cc  websocket_client.cc  websocket_client.h  wifi_manager.cc  wifi_manager.h
examples/speech_commands_recognition_with_llm/model_demo/: omni_realtime_client.py
examples/speech_commands_recognition_with_llm/server/: audio_receiver.py  audio_receiver_debug.py  audio_receiver_diagnostic.py  audio_receiver_pipe.py  audio_receiver_simple.py  audio_receiver_with_logs.py  qwen_demo.py  requirements.txt  run_direct.sh  run_receiver.sh  run_receiver_mac.sh  send_custom_audio.py  server.py  test_websocket_client.py  websocket_audio_server.py
examples/use_llm/: CMakeLists.txt  CONVERSATION_TIMEOUT_OPTIMIZATION.md  QUICK_START.md  README.md  USAGE_GUIDE.md  VAD_UPGRADE_SUMMARY.md  WIFI_CONFIG.md  partitions.csv  sdkconfig.defaults  test_vad.md
examples/use_llm/main/: CMakeLists.txt  audio_recorder.cc  audio_recorder.h  bsp_board.cc  led_controller.cc  led_controller.h  main.cc  server_client.cc  server_client.h  system_config.h  wake_word_detector.cc  wake_word_detector.h  wifi_manager.cc  wifi_manager.h
examples/use_llm/main/mock_voices/: welcome.h
examples/use_llm/model_demo/: omni_realtime_client.py
examples/use_llm/server/: .env  (+24 more)
src/: audio_player.cpp  audio_player.h  main.cpp  main_simple.cpp  websocket_client.cpp  websocket_client.h
(+6 files in other folders)
